--- a/src/gfx/convimg.yaml
+++ b/src/gfx/convimg.yaml
@@ -2,21 +2,22 @@ palettes:
   - name: global_palette
     fixed-entries:
       - color: {index: 0, r: 255, g: 255, b: 255}
+      - color: {index: 1, r: 255, g: 216, b: 0}
     images: automatic
 
 converts:
-  - name: sprite
+  - name: tileset
     palette: global_palette
-    compress: zx0
-    images:
-      - imgs/growmi_mag_tail.png
-      - imgs/growmi_snake_head.png
-
+    tilesets:
+      tile-width: 18
+      tile-height: 18
+      images:
+        - tileset.png
 outputs:
   - type: c
     include-file: gfx.h
     palettes:
       - global_palette
     converts:
-      - sprite
+      - tileset
 
