--- a/src/gfx/convimg.yaml
+++ b/src/gfx/convimg.yaml
@@ -16,6 +16,7 @@ converts:
   - name: bg
     palette: global_palette
     compress: zx7
+    width-and-height: false
     images:
       - clouds.png
 outputs:
