--- a/src/gfx/convimg.yaml
+++ b/src/gfx/convimg.yaml
@@ -18,7 +18,7 @@ converts:
     compress: zx7
     width-and-height: false
     images:
-      - clouds.png
+      - growmi_bg.png
 outputs:
   - type: c
     include-file: gfx.h
